--- a/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
@@ -42,6 +42,15 @@
                 <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> Unités de mesure
             </NavLink>
 
+            <NavLink class="nav-link" href="releves">
+                <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> Releves
+            </NavLink>
+
+            <NavLink class="nav-link" href="sonde">
+                <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> sondes
+            </NavLink>
+
+
             <NavLink class="nav-link" href="utilisateurs">
                 <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Utilisateurs
             </NavLink>
