--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Localisations/Create.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Localisations/Create.razor
@@ -1,4 +1,4 @@
-cl@page "/localisations/create"
+@page "/localisations/create"
 @using Application.DTOs
 @using Application.DTOs.Localisation
 @using Presentation.Web.Services
