Seuil alerte done

--- a/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
@@ -55,13 +55,10 @@
                 <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Utilisateurs
             </NavLink>
 
-            <NavLink class="nav-link" href="sondes">
+            <NavLink class="nav-link" href="sonde">
                 <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Sondes
             </NavLink>
 
-            <NavLink class="nav-link" href="utilisateurs">
-                <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Utilisateurs
-            </NavLink>
         </div>
     </nav>
 </div>
