--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Sonde/Index.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Sonde/Index.razor
@@ -64,6 +64,8 @@
                     <a class="btn btn-sm btn-info me-1" href="@($"/sonde/details/{s.Id}")">Details</a>
                     <a class="btn btn-sm btn-warning me-1" href="@($"/sonde/edit/{s.Id}")">Edit</a>
                     <a class="btn btn-sm btn-danger" href="@($"/sonde/delete/{s.Id}")">Delete</a>
+                    <a class="btn btn-secondary" href="@($"/seuilalerte/sonde/{s.Id}")">>Seuils alerte</a>
+
                 </td>
             </tr>
         }
@@ -71,6 +73,7 @@
 </table>
 
 <a class="btn btn-primary" href="/sonde/create">Créer une sonde</a>
+
 
 @code {
     private IEnumerable<SondeDto> sondes = new List<SondeDto>();
