--- a/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
@@ -8,6 +8,7 @@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
@@ -33,33 +34,41 @@
         </div>
 
         <div class="nav-item px-3">
-
             <NavLink class="nav-link" href="systeme-partenaires">
-                <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Systeme Partenaires
+                <span class="bi bi-diagram-3-fill-nav-menu" aria-hidden="true"></span> Systeme Partenaires
             </NavLink>
+        </div>
 
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="unitemesure">
                 <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> Unités de mesure
             </NavLink>
+        </div>
 
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="releves">
                 <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> Releves
             </NavLink>
-
-            <NavLink class="nav-link" href="sonde">
-                <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> sondes
-            </NavLink>
-
-
-            <NavLink class="nav-link" href="utilisateurs">
-                <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Utilisateurs
-            </NavLink>
-
-            <NavLink class="nav-link" href="sonde">
-                <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Sondes
-            </NavLink>
-
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="sonde">
+                <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> Sondes
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="utilisateurs">
+                <span class="bi bi-people-fill-nav-menu" aria-hidden="true"></span> Utilisateurs
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="alerte/dashboard">
+                <span class="bi bi-exclamation-triangle-fill-nav-menu" aria-hidden="true"></span> Alertes
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
