--- a/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
@@ -1,74 +1,79 @@
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Presentation.Web</a>
+        <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
     </div>
 </div>
-
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+                <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+                <span class="bi bi-list-nested" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="localisations">
-                <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Localisations
+                <span class="bi bi-geo-alt-fill" aria-hidden="true"></span> Localisations
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="systeme-partenaires">
-                <span class="bi bi-diagram-3-fill-nav-menu" aria-hidden="true"></span> Systeme Partenaires
+                <span class="bi bi-diagram-3-fill" aria-hidden="true"></span> Systeme Partenaires
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="unitemesure">
-                <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> Unités de mesure
+                <span class="bi bi-thermometer-half" aria-hidden="true"></span> Unités de mesure
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="releves">
-                <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> Releves
+                <span class="bi bi-thermometer-half" aria-hidden="true"></span> Releves
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="sonde">
-                <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> Sondes
+                <span class="bi bi-thermometer-half" aria-hidden="true"></span> Sondes
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="utilisateurs">
-                <span class="bi bi-people-fill-nav-menu" aria-hidden="true"></span> Utilisateurs
+                <span class="bi bi-people-fill" aria-hidden="true"></span> Utilisateurs
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="alerte/dashboard">
-                <span class="bi bi-exclamation-triangle-fill-nav-menu" aria-hidden="true"></span> Alertes
+                <span class="bi bi-exclamation-triangle-fill" aria-hidden="true"></span> Alertes
+            </NavLink>
+        </div>
+
+        <!-- Add Actionneurs menu -->
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="actionneurs">
+                <span class="bi bi-lightbulb-fill" aria-hidden="true"></span> Actionneurs
             </NavLink>
         </div>
 
     </nav>
 </div>
-
